--- a/src/palind/package.json
+++ b/src/palind/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "udemy_tspro",
+  "name": "palind",
   "version": "1.0.0",
-  "description": "## setup",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,10 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "typescript": "^5.2.2"
-  },
   "devDependencies": {
-    "@types/node": "^20.8.3"
+    "typescript": "^5.2.2"
   }
 }
