--- a/src/palind/package.json
+++ b/src/palind/package.json
@@ -2,9 +2,10 @@
   "name": "palind",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib",
+  "types": "lib",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
