--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "udemy_tspro",
   "version": "1.0.0",
-  "description": "## setup",
+  "description": "typescript training",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/basics/src/index.ts"
+    "start": "ts-node src/intermediate/src/index.ts"
   },
   "keywords": [],
   "author": "",
